--- a/main.html
+++ b/main.html
@@ -26,7 +26,7 @@
       <img src="chicago.jpg" alt="Chicago">
     </div>
 
-    <div class="item third-slide">
+    <div class="item third-slide active">
       <img src="ny.jpg" alt="New York">
     </div>
 	  <div class="item fourth-slide">
